<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">FPU Calculator</string>
    <string name="Total_Carbs">Total Carbs [g]</string>
    <string name="Total_Fat">Total Fat [g]</string>
    <string name="Total_Protein">Total Proteins [g]</string>
    <string name="Carb_Ratio">Carb Ratio [g/u]</string>
    <string name="Calculate">Calculate</string>
    <string name="Insulin_for_Carbs">Insulin for Carbs [units]</string>
    <string name="Insulin_for_Fat_and_Protein">Insulin for Fat and Protein [units]</string>
    <string name="EquivalentCarbs">Equivalent Carbs from Fat and Protein [g]</string>
    <string name="Duration">Duration [min] / [hr]</string>
    <string name="Additional_basal_equiv">Additional basal equivalent [u/h]</string>
    <string name="Warning">Only for Kids and Teenagers !!!</string>
    <string name="Ratio">Split [%]</string>
    <string name="EmptyFieldsMessage">Fields need to be filled in...</string>
    <string name="DefaultValuesLoadedToastMessage">Default safety value loaded...</string>
    <string name="DefaultMinimumSplitRatioLoadedToastMessage">Minimum split ratio reached, minimum allowed value loaded...</string>
</resources>
